[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Block.gd" type="Script" id=1]
[ext_resource path="res://Scene/EfekBlockPecah.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.478431, 0.776471, 0.588235, 1 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="BoxShape" id=4]

[node name="Block" type="KinematicBody" groups=[
"objek",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 1, 0.0208216, 0, -6.19622 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="Area"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 1, 0.0208216, 0, 6.09838 )
shape = SubResource( 3 )

[node name="EfekBlockPecah" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0 )

[node name="AreaPemainMasuk" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AreaPemainMasuk"]
transform = Transform( 5, 0, 0, 0, 0.3, 0, 0, 0, 5, 0, 1.47604, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="AreaPemainMasuk" to="." method="_on_AreaPemainMasuk_body_entered"]
